--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "starting-up",
   "version": "1.0.0",
-  "description": "",
+  "description": "learning electron.js",
   "license": "ISC",
-  "author": "",
+  "author": "yashviagrawal03@gmail.com",
   "type": "commonjs",
   "main": "main.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "publish": "cross-env DOTENV_CONFIG_PATH=.env electron-forge publish"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
@@ -23,6 +23,8 @@
     "@electron-forge/plugin-fuses": "^7.8.0",
     "@electron-forge/publisher-github": "^7.8.0",
     "@electron/fuses": "^1.8.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "electron": "^35.2.1"
   },
   "dependencies": {
