--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "publish": "electron-forge publish"
+    "publish": "electron-forge publish",
+    "build:css": "npx tailwindcss -i input.css -o ./output.css --watch"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.0",
@@ -25,9 +26,13 @@
     "@electron/fuses": "^1.8.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
-    "electron": "^35.2.1"
+    "electron": "^35.2.1",
+    "electron-reloader": "^1.2.3"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "@tailwindcss/cli": "^4.1.4",
+    "electron-squirrel-startup": "^1.0.1",
+    "tailwindcss": "^4.1.4",
+    "update-electron-app": "^3.1.1"
   }
 }
